@@ -4,6 +4,7 @@ Changes in <next version>:
  * Fix half pixel error in linear WCS FITS support
  * Save custom definitions after importing data, to allow customs
    to depend on datasets.
+ * Use Ghostscript to write EPS/PS formats
 
 Changes in 1.26.1:
  * Change homepage in program to new site https://veusz.github.io/
